--- a/myapp/docker-compose.yml
+++ b/myapp/docker-compose.yml
@@ -7,5 +7,6 @@ services:
       context: ../
     volumes:
       - ../myapp:/go/src/myapp/
+      - ../myapp/go.dev.mod:/go/src/myapp/go.mod
       - ../mypackage:/go/src/mypackage
     restart: unless-stopped
